# agent_review

./: .gitignore  AGENTS.md  ARCHITECTURE.md  README.md  pyproject.toml
docs/: agent_review_current_end_to_end_processing_flow_v1.md  agent_review_external_data_ingestion_sprint_plan_v1.md  agent_review_hku300_official_gap_analysis_v1.md  agent_review_mainline_convergence_refactor_v1.md  agent_review_mainline_convergence_sprint_plan_v1.md  agent_review_next_stage_architecture_v1.md  agent_review_next_stage_sprint_plan_v1.md  agent_review_official_19_rule_mapping_v1.md  agent_review_official_sample_driven_reorganization_plan_v1.md  agent_review_parallel_execution_plan_v1.md  agent_review_parser_ontology_master_table_v1.md  agent_review_parser_zone_clause_semantic_ontology_v2.md  agent_review_three_engine_compressed_architecture_v1.md  business_design.md  dimension_design.md  document_profile_domain_profile_v1.md  harness_architecture.md  hk_sz_manual_vs_mainline_gap_breakdown_v1.md  legal_principle_driven_review_design_v1.md  llm_enhancement_watchdog_v1.md  missed_risks_minimal_fix_design_v1.md  ontology_data_contract_v1.md  ontology_v1.md  parser_design_v1.md  parser_paragraph_tree_dominant_v2.md  parser_second_phase_eval.md  review_point_catalog.md  review_point_rule_authority_contract_v1.md  review_workflow.md  src_agent_review_directory_convergence_refactor_plan_v1.md  unknown_document_first_sprint_plan_v1.md  unknown_sample_regression_entry.md  unknown_sample_regression_manifest_example.txt  unknown_sample_regression_manifest_v1.txt
examples/: sample_tender.txt
(+177 files in other folders)
